Fixes jumpiness on FF

--- a/frontend/components/FleetAce/_styles.scss
+++ b/frontend/components/FleetAce/_styles.scss
@@ -11,7 +11,7 @@
       justify-content: space-between;
 
       button {
-        height: 36px; // aligning space between label and textarea
+        height: initial; // aligning space between label and textarea
         animation: fade-in 250ms ease-out;
       }
     }
